--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@ body {
 .text-box {
     margin: 0;
   position: absolute;
-  top: 45%;
-  left: 2%;
+  bottom: 10%;
+  left: 32%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 .text-box1 {
     margin: 0;
   position: absolute;
-  top: 55%;
-  left: 2%;
+  bottom: 10%;
+  left: 54%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
