--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
     margin: 0;
   position: absolute;
   bottom: 10%;
-  left: 32%;
+  left: 32.5%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
@@ -41,7 +41,7 @@ body {
     margin: 0;
   position: absolute;
   bottom: 10%;
-  left: 54%;
+  right: 46%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
