--- a/index.html
+++ b/index.html
@@ -30,18 +30,21 @@ body {
 
 
 .text-box {
-    margin: 0;
+    font-size:1vw;
+    text-align: center;
+    margin-left: 33pw;
   position: absolute;
-  bottom: 10%;
-  left: 32.5%;
+  bottom: 10vw;
+  left: 22vw;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 .text-box1 {
-    margin: 0;
+    font-size:1vw;
+    margin-right: 50px;
   position: absolute;
-  bottom: 10%;
-  right: 46%;
+  bottom: 10vw;
+  right:29vw;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
