--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
+<title>НҮҮР ХУУДАС</title>
 <style>
 html {
   height: 100%;
@@ -145,7 +146,7 @@ body {
     </div>
     
     <div class="text-box1">
-        <a id="slider1" href="index_eng.html" class="slide-in1 btn btn-white btn-animated">English</a>
+        <a id="slider1" href="about_en.html" class="slide-in1 btn btn-white btn-animated">English</a>
     </div>
 </body>
 </html>
