--- a/about_en.html
+++ b/about_en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style_mobile.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Given below is Font Awesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>БИДНИЙ ТУХАЙ</title>
