--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@ body {
 </head>
 <body class="containr">
     <div class="text-box">
-        <a id="slider" href="index_mon.html" class="slide-in btn btn-white btn-animated">Монгол</a>
+        <a id="slider" href="1.html" class="slide-in btn btn-white btn-animated">Монгол</a>
     </div>
     
     <div class="text-box1">
-        <a id="slider1" href="about_en.html" class="slide-in1 btn btn-white btn-animated">English</a>
+        <a id="slider1" href="11.html" class="slide-in1 btn btn-white btn-animated">English</a>
     </div>
 </body>
 </html>
