english versiion added

--- a/11.html
+++ b/11.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Given below is Font Awesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <title>БИДНИЙ ТУХАЙ</title>
+    <title>ABOUT US</title>
 
     <style>
 
@@ -37,21 +37,21 @@
         </span>
         <ul class="navItems">
             <li>
-                <a href="#">
+                <a href="index.html">
                     <i class="fa fa-home" style="--i:1"></i>
-                    <span style="--g:1">НҮҮР ХУУДАС</span>
+                    <span style="--g:1">LANDING PAGE</span>
                 </a>
             </li>
             <li>
                 <a href="#">
                     <i class="fa fa-user" style="--i:2"></i>
-                    <span style="--g:2">БИДНИЙ ТУХАЙ</span>
+                    <span style="--g:2">ABOUT US</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="22.html">
                     <i class="fa fa-folder" style="--i:3"></i>
-                    <span style="--g:3">ҮЙЛ АЖИЛЛАГАА</span>
+                    <span style="--g:3">ACTIVITIES</span>
                 </a>
             </li>
             <!--
@@ -63,16 +63,16 @@
             </li>
             -->
             <li>
-                <a href="#">
+                <a href="33.html">
                     <i class="fa fa-globe" style="--i:5"></i>
-                    <span style="--g:5">ХАЯГ БАЙРШИЛ</span>
+                    <span style="--g:5">LOCATION</span>
                 </a>
             </li>
         </ul>
     </div>
 
     <div class="containerGG">
-        <img style="background-image: url(main_eng.png);" src="main_eng.png">
+        <img style="background-image: url(11.png);" src="11.png">
     </div> 
 
     <script>
